src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>eCASS02t1__X8a_Area_of_Residence__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__Area_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8a. Area of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X8b_Community_Care_Area__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__CCA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>8b. Community Care Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__X9_City_County__c</fullName>
        <formula>eCASS02t1__Area_of_Residence_and_Reg_Code__r.eCASS02t1__RegCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>9. City/County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eCASS02t1__nation__c</fullName>
        <formula>IF( OR( TEXT(eCASS02t1__X10a_Nationality__c) = &quot;1. Irish&quot; ,

TEXT( eCASS02t1__X10a_Nationality__c ) = &quot;3. Irish traveller&quot;),

&quot;IRL&quot;,

IF(TEXT( eCASS02t1__X10a_Nationality__c ) = &quot;9. Not known&quot;, &quot;ZZZ&quot;,


eCASS02t1__X10a_Nationality_Other__r.eCASS02t1__NationCode__c))</formula>
        <label>nation</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <namedFilters>
        <fullName>eCASS02t1__Contact_00NG0000008tiOpMAI</fullName>
        <active>true</active>
        <field>Contact.eCASS02t1__GP__c</field>
        <filterItems>
            <field>Contact.eCASS02t1__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Key Worker, Case Worker, Counsellor, GP, Probation Officer, Social worker</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Contact_00N20000007vD3YEAU</name>
    </namedFilters>
    <namedFilters>
        <fullName>eCASS02t1__Contact_00NG0000008viZMMAY</fullName>
        <active>true</active>
        <field>Contact.eCASS02t1__Key_Worker__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Contact_00N20000007vD3gEAE</name>
    </namedFilters>
    <namedFilters>
        <fullName>eCASS02t1__Contact_00NG0000008viZRMAY</fullName>
        <active>true</active>
        <field>Contact.eCASS02t1__Case_Worker__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Contact_00N20000007vD3IEAU</name>
    </namedFilters>
    <namedFilters>
        <fullName>eCASS02t1__Contact_00NG0000008viZqMAI</fullName>
        <active>true</active>
        <field>Contact.eCASS02t1__Probation_Officer__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <filterItems>
            <field>Contact.eCASS02t1__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Key Worker, Case Worker, Counsellor, GP, Probation Officer, Social worker</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Contact_00N20000007vD3xEAE</name>
    </namedFilters>
    <namedFilters>
        <fullName>eCASS02t1__Contact_00NG0000008via0MAA</fullName>
        <active>true</active>
        <field>Contact.eCASS02t1__Social_worker__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>General contact</value>
        </filterItems>
        <filterItems>
            <field>Contact.eCASS02t1__Contact_Type__c</field>
            <operation>equals</operation>
            <value>Key Worker, Case Worker, Counsellor, GP, Probation Officer, Social worker</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>nf_Contact_00N20000007vD45EAE</name>
    </namedFilters>
    <namedFilters>
        <fullName>eCASS02t1__nf_01Ib0000000TUlbEAG_00Nb0000000iOU9EAM</fullName>
        <active>true</active>
        <field>eCASS02t1__Needle_Exchange__c.eCASS02t1__Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <infoMessage>Showing only clients</infoMessage>
        <isOptional>true</isOptional>
        <name>nf_01I20000000RwnBEAS_00N20000007vD92EAE</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000wtiREAQ_00N20000007bPiyEAE</fullName>
        <active>true</active>
        <field>Comprehensive_Assessment__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01I20000000RwrfEAC_00N20000007vDIgEAM</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I20000000wtiSEAQ_00N20000007bO1AEAU</fullName>
        <active>true</active>
        <field>Initial_Assessment_Form__c.Client__c</field>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>nf_01I20000000RwrgEAC_00N20000007vDIhEAM</name>
    </namedFilters>
    <recordTypes>
        <fullName>eCASS02t1__Client</fullName>
        <active>true</active>
        <description>Clients</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>eCASS02t1__General_contact</fullName>
        <active>true</active>
        <description>For all other contacts</description>
        <label>General contact</label>
    </recordTypes>
    <validationRules>
        <fullName>eCASS02t1__Client_Homeless</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(eCASS02t1__X7b_Livin_Where__c) = &quot;3. Homeless&quot;,
TEXT(eCASS02t1__X7a_Living_with_whom__c) &lt;&gt; &quot;7. Other&quot;)</errorConditionFormula>
        <errorMessage>If the client is homeless or in an institution, please, select Q7a = &quot;7. Other&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>eCASS02t1__Employment_status_other_specified</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TEXT( eCASS02t1__X11_Employement_Status__c ) = &quot;8. Other (specify)&quot; , ISBLANK( eCASS02t1__X11_Employement_Status_other__c ))</errorConditionFormula>
        <errorDisplayField>eCASS02t1__X11_Employement_Status_other__c</errorDisplayField>
        <errorMessage>If Employment status = 8. Other (specify), please complete Q11 Employment Status other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>eCASS02t1__Nationality_Other_Specified</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT( eCASS02t1__X10a_Nationality__c ) = &quot;2. Other&quot;,  ISBLANK( eCASS02t1__X10a_Nationality_Other__c ))</errorConditionFormula>
        <errorDisplayField>eCASS02t1__X10a_Nationality_Other__c</errorDisplayField>
        <errorMessage>If 2, please complete 10a Nationality Other</errorMessage>
    </validationRules>
</CustomObject>